Convert Fn::Select to extended get_attr
Overcloud bootstrap_nodeid is now specified by parameter
BootStrapNodeResource with default value controller0.
This avoids the need to use Fn::Select on the mergy.py
built list of controllers to specify the first controller.

Change-Id: Id9cfeab50b90ceeeae51ea0e35997b7495b28cc4
Partial-Blueprint: tripleo-juno-remove-mergepy

--- a/block-storage-nfs.yaml
+++ b/block-storage-nfs.yaml
@@ -50,18 +50,18 @@ resources:
             get_attr: [ BlockStorageKey, SecretAccessKey ]
           stack_name: {get_param: 'AWS::StackName'}
       keystone:
-        host: {"Fn::Select": [ 0, {"Fn::Select": [ "ctlplane", {get_attr: [controller0, networks]} ]} ] }
+        host: {get_attr: [controller0, networks, ctlplane, 0]}
       cinder:
-        db: {list_join: ['', ['mysql://cinder:unset@', {"Fn::Select": [ 0, {"Fn::Select": [ "ctlplane", {get_attr: [controller0, networks]} ]} ] } , '/cinder']]}
+        db: {list_join: ['', ['mysql://cinder:unset@', {get_attr: [controller0, networks, ctlplane, 0]} , '/cinder']]}
         volume_size_mb: '5000'
         service-password:
           get_param: CinderPassword
         include_nfs_backend: 'true'
         nfs_shares:
-          - {list_join: ['', [{"Fn::Select": [ 0, {"Fn::Select": [ "ctlplane", {get_attr: [controller0, networks]} ]} ] } , ':/mnt/state/var/lib/nfs_share']]}
+          - {list_join: ['', [{get_attr: [controller0, networks, ctlplane, 0]} , ':/mnt/state/var/lib/nfs_share']]}
       admin-password: {get_param: AdminPassword}
       rabbit:
-        host: {"Fn::Select": [ 0, {"Fn::Select": [ "ctlplane", {get_attr: [controller0, networks]} ]} ] }
+        host: {get_attr: [controller0, networks, ctlplane, 0]}
         username: {get_param: RabbitUserName}
         password: {get_param: RabbitPassword}
       interfaces:
