--- a/block-storage.yaml
+++ b/block-storage.yaml
@@ -29,9 +29,9 @@ resources:
       server: {get_resource: BlockStorage0}
       config: {get_resource: BlockStorageConfig}
       input_values:
-        controller_host: {"Fn::Select": [ 0, {"Fn::Select": [ "ctlplane", {get_attr: [controller0, networks]} ]} ] }
-        cinder_dsn: {list_join: ['', ['mysql://cinder:unset@', {"Fn::Select": [ 0, {"Fn::Select": [ "ctlplane", {get_attr: [controller0, networks]} ]} ] } , '/cinder']]}
-        neutron_local_ip: {"Fn::Select": [0, "Fn::Select": [ctlplane, {get_attr: [BlockStorage0 , networks]}]]}
+        controller_host: {get_attr: [controller0, networks, ctlplane, 0]}
+        cinder_dsn: {list_join: ['', ['mysql://cinder:unset@', {get_attr: [controller0, networks, ctlplane, 0]} , '/cinder']]}
+        neutron_local_ip: {get_attr: [BlockStorage0 , networks, ctlplane, 0]}
       signal_transport: NO_SIGNAL
   BlockStorageConfig:
     type: OS::Heat::StructuredConfig
