--- a/examples/scale2_hot.yaml
+++ b/examples/scale2_hot.yaml
@@ -55,14 +55,7 @@ resources:
           path: NovaCompute0Config.Metadata
       neutron:
         ovs:
-          local_ip:
-            Fn::Select:
-              - 0
-              - Fn::Select:
-                - ctlplane
-                - get_attr:
-                  - NovaCompute0
-                  - networks
+          local_ip: {get_attr: [NovaCompute0, networks, ctlplane, 0]}
       rabbit:
         username: {get_param: RabbitUserName}
         password: {get_param: RabbitPassword}
