--- a/examples/scale_map_hot.yaml
+++ b/examples/scale_map_hot.yaml
@@ -30,25 +30,11 @@ resources:
             NovaCompute0:
               list_join:
               - ' '
-              - - Fn::Select:
-                  - 0
-                  - Fn::Select:
-                    - ctlplane
-                    - get_attr:
-                      - NovaCompute0
-                      - networks
-                - Fn::Select:
-                  - name
-                  - get_attr:
-                    - NovaCompute0
-                    - show
+              - - {get_attr: [NovaCompute0, networks, ctlplane, 0]}
+                - {get_attr: [NovaCompute0, show, name]}
                 - list_join:
                   - '.'
-                  - - Fn::Select:
-                      - name
-                      - get_attr:
-                        - NovaCompute0
-                        - show
+                  - - {get_attr: [NovaCompute0, show, name]}
                     - 'local'
   NovaCompute0:
     type: FileInclude
