--- a/examples/scale_map_result_hot.yaml
+++ b/examples/scale_map_result_hot.yaml
@@ -46,69 +46,57 @@ resources:
           '
         - - list_join:
             - ' '
-            - - Fn::Select:
+            - - get_attr:
+                - NovaCompute0
+                - networks
+                - ctlplane
                 - 0
-                - Fn::Select:
-                  - ctlplane
-                  - get_attr:
+              - get_attr:
+                - NovaCompute0
+                - show
+                - name
+              - list_join:
+                - .
+                - - get_attr:
                     - NovaCompute0
-                    - networks
-              - Fn::Select:
-                - name
-                - get_attr:
-                  - NovaCompute0
-                  - show
-              - list_join:
-                - .
-                - - Fn::Select:
+                    - show
                     - name
-                    - get_attr:
-                      - NovaCompute0
-                      - show
                   - local
           - list_join:
             - ' '
-            - - Fn::Select:
+            - - get_attr:
+                - NovaCompute1
+                - networks
+                - ctlplane
                 - 0
-                - Fn::Select:
-                  - ctlplane
-                  - get_attr:
+              - get_attr:
+                - NovaCompute1
+                - show
+                - name
+              - list_join:
+                - .
+                - - get_attr:
                     - NovaCompute1
-                    - networks
-              - Fn::Select:
-                - name
-                - get_attr:
-                  - NovaCompute1
-                  - show
-              - list_join:
-                - .
-                - - Fn::Select:
+                    - show
                     - name
-                    - get_attr:
-                      - NovaCompute1
-                      - show
                   - local
           - list_join:
             - ' '
-            - - Fn::Select:
+            - - get_attr:
+                - NovaCompute2
+                - networks
+                - ctlplane
                 - 0
-                - Fn::Select:
-                  - ctlplane
-                  - get_attr:
-                    - NovaCompute2
-                    - networks
-              - Fn::Select:
+              - get_attr:
+                - NovaCompute2
+                - show
                 - name
-                - get_attr:
-                  - NovaCompute2
-                  - show
               - list_join:
                 - .
-                - - Fn::Select:
+                - - get_attr:
+                    - NovaCompute2
+                    - show
                     - name
-                    - get_attr:
-                      - NovaCompute2
-                      - show
                   - local
       os-collect-config:
         cfn:
@@ -165,69 +153,57 @@ resources:
           '
         - - list_join:
             - ' '
-            - - Fn::Select:
+            - - get_attr:
+                - NovaCompute0
+                - networks
+                - ctlplane
                 - 0
-                - Fn::Select:
-                  - ctlplane
-                  - get_attr:
+              - get_attr:
+                - NovaCompute0
+                - show
+                - name
+              - list_join:
+                - .
+                - - get_attr:
                     - NovaCompute0
-                    - networks
-              - Fn::Select:
-                - name
-                - get_attr:
-                  - NovaCompute0
-                  - show
-              - list_join:
-                - .
-                - - Fn::Select:
+                    - show
                     - name
-                    - get_attr:
-                      - NovaCompute0
-                      - show
                   - local
           - list_join:
             - ' '
-            - - Fn::Select:
+            - - get_attr:
+                - NovaCompute1
+                - networks
+                - ctlplane
                 - 0
-                - Fn::Select:
-                  - ctlplane
-                  - get_attr:
+              - get_attr:
+                - NovaCompute1
+                - show
+                - name
+              - list_join:
+                - .
+                - - get_attr:
                     - NovaCompute1
-                    - networks
-              - Fn::Select:
-                - name
-                - get_attr:
-                  - NovaCompute1
-                  - show
-              - list_join:
-                - .
-                - - Fn::Select:
+                    - show
                     - name
-                    - get_attr:
-                      - NovaCompute1
-                      - show
                   - local
           - list_join:
             - ' '
-            - - Fn::Select:
+            - - get_attr:
+                - NovaCompute2
+                - networks
+                - ctlplane
                 - 0
-                - Fn::Select:
-                  - ctlplane
-                  - get_attr:
-                    - NovaCompute2
-                    - networks
-              - Fn::Select:
+              - get_attr:
+                - NovaCompute2
+                - show
                 - name
-                - get_attr:
-                  - NovaCompute2
-                  - show
               - list_join:
                 - .
-                - - Fn::Select:
+                - - get_attr:
+                    - NovaCompute2
+                    - show
                     - name
-                    - get_attr:
-                      - NovaCompute2
-                      - show
                   - local
       os-collect-config:
         cfn:
@@ -284,69 +260,57 @@ resources:
           '
         - - list_join:
             - ' '
-            - - Fn::Select:
+            - - get_attr:
+                - NovaCompute0
+                - networks
+                - ctlplane
                 - 0
-                - Fn::Select:
-                  - ctlplane
-                  - get_attr:
+              - get_attr:
+                - NovaCompute0
+                - show
+                - name
+              - list_join:
+                - .
+                - - get_attr:
                     - NovaCompute0
-                    - networks
-              - Fn::Select:
-                - name
-                - get_attr:
-                  - NovaCompute0
-                  - show
-              - list_join:
-                - .
-                - - Fn::Select:
+                    - show
                     - name
-                    - get_attr:
-                      - NovaCompute0
-                      - show
                   - local
           - list_join:
             - ' '
-            - - Fn::Select:
+            - - get_attr:
+                - NovaCompute1
+                - networks
+                - ctlplane
                 - 0
-                - Fn::Select:
-                  - ctlplane
-                  - get_attr:
+              - get_attr:
+                - NovaCompute1
+                - show
+                - name
+              - list_join:
+                - .
+                - - get_attr:
                     - NovaCompute1
-                    - networks
-              - Fn::Select:
-                - name
-                - get_attr:
-                  - NovaCompute1
-                  - show
-              - list_join:
-                - .
-                - - Fn::Select:
+                    - show
                     - name
-                    - get_attr:
-                      - NovaCompute1
-                      - show
                   - local
           - list_join:
             - ' '
-            - - Fn::Select:
+            - - get_attr:
+                - NovaCompute2
+                - networks
+                - ctlplane
                 - 0
-                - Fn::Select:
-                  - ctlplane
-                  - get_attr:
-                    - NovaCompute2
-                    - networks
-              - Fn::Select:
+              - get_attr:
+                - NovaCompute2
+                - show
                 - name
-                - get_attr:
-                  - NovaCompute2
-                  - show
               - list_join:
                 - .
-                - - Fn::Select:
+                - - get_attr:
+                    - NovaCompute2
+                    - show
                     - name
-                    - get_attr:
-                      - NovaCompute2
-                      - show
                   - local
       os-collect-config:
         cfn:
