--- a/examples/scale_result_hot.yaml
+++ b/examples/scale_result_hot.yaml
@@ -42,13 +42,11 @@ resources:
       neutron:
         ovs:
           local_ip:
-            Fn::Select:
+            get_attr:
+            - NovaCompute0
+            - networks
+            - ctlplane
             - 0
-            - Fn::Select:
-              - ctlplane
-              - get_attr:
-                - NovaCompute0
-                - networks
       os-collect-config:
         cfn:
           access_key_id:
@@ -103,13 +101,11 @@ resources:
       neutron:
         ovs:
           local_ip:
-            Fn::Select:
+            get_attr:
+            - NovaCompute1
+            - networks
+            - ctlplane
             - 0
-            - Fn::Select:
-              - ctlplane
-              - get_attr:
-                - NovaCompute1
-                - networks
       os-collect-config:
         cfn:
           access_key_id:
@@ -164,13 +160,11 @@ resources:
       neutron:
         ovs:
           local_ip:
-            Fn::Select:
+            get_attr:
+            - NovaCompute2
+            - networks
+            - ctlplane
             - 0
-            - Fn::Select:
-              - ctlplane
-              - get_attr:
-                - NovaCompute2
-                - networks
       os-collect-config:
         cfn:
           access_key_id:
