--- a/nfs-server-source.yaml
+++ b/nfs-server-source.yaml
@@ -9,20 +9,16 @@ resources:
             NovaCompute0:
               list_join:
               - ' '
-              - - Fn::Select:
+              - - get_attr:
+                  - NovaCompute0
+                  - networks
+                  - ctlplane
                   - 0
-                  - Fn::Select:
-                    - ctlplane
-                    - get_attr:
-                      - NovaCompute0
-                      - networks
             BlockStorage0:
               list_join:
               - ' '
-              - - Fn::Select:
+              - - get_attr:
+                  - BlockStorage0
+                  - networks
+                  - ctlplane
                   - 0
-                  - Fn::Select:
-                    - ctlplane
-                    - get_attr:
-                      - BlockStorage0
-                      - networks
