--- a/nova-compute-instance.yaml
+++ b/nova-compute-instance.yaml
@@ -207,7 +207,7 @@ resources:
         neutron_flat_networks: {get_param: NeutronFlatNetworks}
         neutron_host: {get_param: NeutronHost}
         neutron_dsn: {get_param: NeutronDSN}
-        neutron_local_ip: {"Fn::Select": [ 0, "Fn::Select": [ ctlplane, { get_attr: [ NovaCompute0, networks ]}]]}
+        neutron_local_ip: {get_attr: [NovaCompute0, networks, ctlplane, 0]}
         neutron_tenant_network_type: {get_param: NeutronNetworkType}
         neutron_network_vlan_ranges: {get_param: NeutronNetworkVLANRanges}
         neutron_bridge_mappings: {get_param: NeutronBridgeMappings}
