--- a/swift-deploy.yaml
+++ b/swift-deploy.yaml
@@ -28,19 +28,13 @@ resources:
                 list_join:
                 - ''
                 - - 'r1z1-'
-                  - {"Fn::Select": [ 0, {"Fn::Select": [ "ctlplane", {get_attr: [controller0, networks]} ]} ] }
+                  - {get_attr: [controller0, networks, ctlplane, 0]}
                   - ':%PORT%/d1'
               SwiftStorage0:
                 list_join:
                 - ''
                 - - 'r1z1-'
-                  - Fn::Select:
-                    - 0
-                    - Fn::Select:
-                      - 'ctlplane'
-                      - get_attr:
-                        - SwiftStorage0
-                        - networks
+                  - {get_attr: [SwiftStorage0, networks, ctlplane, 0]}
                   - ':%PORT%/d1'
         swift_proxy_memcache:
           list_join:
@@ -51,5 +45,5 @@ resources:
                     - ', '
                     - - list_join:
                         - ''
-                        - - {"Fn::Select": [ 0, {"Fn::Select": [ "ctlplane", {get_attr: [controller0, networks]} ]} ] }
+                        - - {get_attr: [controller0, networks, ctlplane, 0]}
                           - ':11211'
