--- a/swift-storage-source.yaml
+++ b/swift-storage-source.yaml
@@ -35,7 +35,7 @@ resources:
       config: {get_resource: SwiftKeystoneConfig}
       signal_transport: NO_SIGNAL
       input_values:
-        keystone_host: {"Fn::Select": [ 0, {"Fn::Select": [ "ctlplane", {get_attr: [controller0, networks]} ]} ] }
+        keystone_host: {get_attr: [controller0, networks, ctlplane, 0]}
   SwiftStorage0Deploy:
     type: OS::Heat::StructuredDeployment
     properties:
@@ -43,7 +43,7 @@ resources:
       config: {get_resource: SwiftConfig}
       signal_transport: NO_SIGNAL
       input_values:
-        neutron_local_ip: {"Fn::Select": [ 0, {"Fn::Select": [ "ctlplane", {get_attr: [SwiftStorage0, networks]} ]} ] }
+        neutron_local_ip: {get_attr: [SwiftStorage0, networks, ctlplane, 0]}
         swift_hash_suffix: {get_param: SwiftHashSuffix}
         swift_password: {get_param: SwiftPassword}
         swift_devices:
@@ -54,19 +54,13 @@ resources:
                 list_join:
                 - ''
                 - - 'r1z1-'
-                  - {"Fn::Select": [ 0, {"Fn::Select": [ "ctlplane", {get_attr: [controller0, networks]} ]} ] }
+                  - {get_attr: [controller0, networks, ctlplane, 0]}
                   - ':%PORT%/d1'
               SwiftStorage0:
                 list_join:
                 - ''
                 - - 'r1z1-'
-                  - Fn::Select:
-                    - 0
-                    - Fn::Select:
-                      - 'ctlplane'
-                      - get_attr:
-                        - SwiftStorage0
-                        - networks
+                  - {get_attr: [SwiftStorage0, networks, ctlplane, 0]}
                   - ':%PORT%/d1'
         swift_proxy_memcache:
           list_join:
@@ -77,5 +71,5 @@ resources:
                     - ', '
                     - - list_join:
                         - ''
-                        - - {"Fn::Select": [ 0, {"Fn::Select": [ "ctlplane", {get_attr: [controller0, networks]} ]} ] }
+                        - - {get_attr: [controller0, networks, ctlplane, 0]}
                           - ':11211'
