--- a/undercloud-source.yaml
+++ b/undercloud-source.yaml
@@ -198,18 +198,7 @@ resources:
         admin-token:
           get_param: AdminToken
         bootstrap_host:
-          bootstrap_nodeid:
-            Fn::Select:
-            - 0
-            - Fn::Select:
-              - 0
-              - Merge::Map:
-                  undercloud:
-                  - Fn::Select:
-                    - name
-                    - get_attr:
-                      - undercloud
-                      - show
+          bootstrap_nodeid: {get_attr: [undercloud, show, name]}
           nodeid: {get_input: bootstack_nodeid}
         bootstack:
           public_interface_ip:
@@ -315,36 +304,33 @@ resources:
       server: {get_resource: undercloud}
       input_values:
         bootstack_nodeid:
-          Fn::Select:
-            - name
-            - get_attr:
-              - undercloud
-              - show
+          get_attr:
+          - undercloud
+          - show
+          - name
         controller_host:
-          Fn::Select:
-            - 0
-            - Fn::Select:
-              - ctlplane
-              - get_attr:
-                - undercloud
-                - networks
+          get_attr:
+          - undercloud
+          - networks
+          - ctlplane
+          - 0
         heat.watch_server_url:
           list_join:
             - ''
             - - 'http://'
-              - {"Fn::Select": [ 0, "Fn::Select": [ ctlplane, { get_attr: [ undercloud, networks ]}]]}
+              - get_attr: [undercloud, networks, ctlplane, 0]
               - ':8003'
         heat.metadata_server_url:
           list_join:
             - ''
             - - 'http://'
-              - {"Fn::Select": [ 0, "Fn::Select": [ ctlplane, { get_attr: [ undercloud, networks ]}]]}
+              - {get_attr: [undercloud, networks, ctlplane, 0]}
               - ':8000'
         heat.waitcondition_server_url:
           list_join:
             - ''
             - - 'http://'
-              - {"Fn::Select": [ 0, "Fn::Select": [ ctlplane, { get_attr: [ undercloud, networks ]}]]}
+              - {get_attr: [undercloud, networks, ctlplane, 0]}
               - ':8000/v1/waitcondition'
   00_undercloudPassthroughDeployment:
     type: OS::Heat::StructuredDeployment
