--- a/ssl-source.yaml
+++ b/ssl-source.yaml
@@ -31,24 +31,40 @@ Resources:
            - name: 'ec2'
              accept: 13773
              connect: 8773
+             connect_host:
+               get_input: controller_host
            - name: 'image'
              accept: 13292
              connect: 9292
+             connect_host:
+               get_input: controller_host
            - name: 'identity'
              accept: 13000
              connect: 5000
+             connect_host:
+               get_input: controller_host
            - name: 'network'
              accept: 13696
              connect: 9696
+             connect_host:
+               get_input: controller_host
            - name: 'compute'
              accept: 13774
              connect: 8774
+             connect_host:
+               get_input: controller_host
            - name: 'swift-proxy'
              accept: 13080
              connect: 8080
+             connect_host:
+               get_input: controller_host
            - name: 'cinder'
              accept: 13776
              connect: 8776
+             connect_host:
+               get_input: controller_host
            - name: 'ceilometer'
              accept: 13777
              connect: 8777
+             connect_host:
+               get_input: controller_host
